forgot some headers

--- a/sleeper.ipynb
+++ b/sleeper.ipynb
@@ -18,6 +18,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1afed066",
+   "metadata": {},
+   "source": [
+    "## 1. Data Cleaning (if any)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "c1510242",
@@ -408,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2510d5db",
+   "id": "af9e3e46",
    "metadata": {},
    "source": [
     "## 2. Data-centric adjustments"
@@ -416,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4033714",
+   "id": "125f966b",
    "metadata": {},
    "source": [
     "### 2.1 Oversampling using SmoteNC (nominal continuous)"
@@ -511,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f89a91f",
+   "id": "9a5d7263",
    "metadata": {},
    "source": [
     "Note how features like NoDocbcCost has the relationship of positive ratio flipped between the two classes. Similarly, the distribution of disease rate among features like education also shifts"
@@ -519,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "435ed267",
+   "id": "f504ca14",
    "metadata": {},
    "source": [
     "## 3 Model-centric approach"
@@ -528,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "460b3a10",
+   "id": "75a56ada",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "5fe24b7e",
+   "id": "8e480036",
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53cb2a7e",
+   "id": "8135cc17",
    "metadata": {},
    "source": [
     "### 3.1 Setting a baseline model\n",
@@ -569,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76bf4a50",
+   "id": "36920b2f",
    "metadata": {},
    "source": [
     "The default solver lbfgs has problem converging. Try:\n",
@@ -581,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "d9cb2697",
+   "id": "4cb24c30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "27625f7d",
+   "id": "97f91cf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "e132b6fd",
+   "id": "f96f4f83",
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "017a0432",
+   "id": "52094666",
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40617bb7",
+   "id": "b20d022e",
    "metadata": {},
    "source": [
     "### 3.2 Treating the problem as an outlier detection problem"
@@ -902,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "0f99cb57",
+   "id": "18d3bb71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "d2f55b55",
+   "id": "249d0f47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "42852c39",
+   "id": "880b274c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "86f7c902",
+   "id": "29540848",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "325e87db",
+   "id": "4e1a9ce7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "9385ecaa",
+   "id": "08ec4bff",
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "f6837074",
+   "id": "30feb34b",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "539e3650",
+   "id": "1f3cac8a",
    "metadata": {
     "scrolled": true
    },
@@ -1086,16 +1094,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f50c80c1",
+   "id": "80c8698b",
+   "metadata": {},
+   "source": [
+    "nah not good enough"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf1d7dc4",
    "metadata": {},
    "source": [
     "### 3.3 Rabbit hole"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3641bc4",
+   "metadata": {},
+   "source": [
+    "## Second iteration: \n",
+    "feature engineering and selection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e86a7a1d",
+   "id": "9923424f",
    "metadata": {},
    "outputs": [],
    "source": []
